--- a/Parallel Processing/Main.xaml
+++ b/Parallel Processing/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1848,831" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1848,831" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="56">
       <x:String>System.Activities</x:String>
@@ -69,17 +69,15 @@
   </TextExpression.ReferencesForImplementation>
   <Sequence sap:VirtualizedContainerService.HintSize="376,448" sap2010:WorkflowViewState.IdRef="Sequence_2">
     <Sequence.Variables>
-      <Variable x:TypeArguments="sd:DataColumn" Name="dtColumn" />
       <Variable x:TypeArguments="sd:DataTable" Name="dt" />
-      <Variable x:TypeArguments="s:Int32[]" Default="[{1,2,3}]" Name="teste" />
-      <Variable x:TypeArguments="s:String[]" Name="testeS" />
+      <Variable x:TypeArguments="x:String" Name="csvPath" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ReadCsvFile Encoding="{x:Null}" DataTable="[dt]" Delimitator="Semicolon" DisplayName="Read CSV" FilePath="C:\Users\Schirru\Desktop\teste.csv" sap:VirtualizedContainerService.HintSize="334,152" sap2010:WorkflowViewState.IdRef="ReadCsvFile_1" />
+    <ui:ReadCsvFile Encoding="{x:Null}" DataTable="[dt]" Delimitator="Semicolon" DisplayName="Read CSV" FilePath="[csvPath]" sap:VirtualizedContainerService.HintSize="334,152" sap2010:WorkflowViewState.IdRef="ReadCsvFile_1" />
     <ui:InvokeCode ContinueOnError="{x:Null}" Code="Dim AlterarColunas As Func(Of DataRow, String) = Function(ByVal dtRow As DataRow) As String&#xA;&#x9;&#x9;Console.WriteLine(String.Format(&quot;{0}_{1}_{2}&quot;, {dtRow.Item(&quot;coluna1&quot;), dtRow.Item(&quot;coluna2&quot;), dtRow.Item(&quot;coluna3&quot;)}))&#xA;&#x9;&#x9;dtRow.Item(&quot;coluna4&quot;) = String.Format(&quot;{0}_{1}_{2}&quot;, {dtRow.Item(&quot;coluna1&quot;), dtRow.Item(&quot;coluna2&quot;), dtRow.Item(&quot;coluna3&quot;)})&#xA;End Function&#xA;&#xA;io_dt.AsEnumerable().AsParallel().WithDegreeOfParallelism(12).ForAll(Function(x) AlterarColunas(x))&#xA;Console.WriteLine(&quot;Numero de registros: &quot; + io_dt.Rows.Count.ToString)" DisplayName="Invoke code" sap:VirtualizedContainerService.HintSize="334,164" sap2010:WorkflowViewState.IdRef="InvokeCode_1">
       <ui:InvokeCode.Arguments>
         <InOutArgument x:TypeArguments="sd:DataTable" x:Key="io_dt">[dt]</InOutArgument>
